--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
         <div class="p-4 border-t border-vectura-border bg-vectura-bg z-20 relative">
           <div class="flex items-center justify-between mb-2">
-            <span class="text-xs text-vectura-muted">Background</span>
+            <label id="label-bg-color" class="text-xs text-vectura-muted" for="inp-bg-color">Background</label>
             <div class="relative w-4 h-4 overflow-hidden rounded border border-vectura-border cursor-pointer hover:border-vectura-accent">
               <input type="color" id="inp-bg-color" aria-label="Background color" />
             </div>
