--- a/index.html
+++ b/index.html
@@ -51,12 +51,6 @@
       </div>
       <div class="text-xs text-vectura-muted" id="status-bar" role="status" aria-live="polite">READY</div>
       <div class="flex gap-4">
-        <button id="btn-toggle-left" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-          [HIDE LEFT]
-        </button>
-        <button id="btn-toggle-right" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-          [HIDE RIGHT]
-        </button>
         <button id="btn-settings" class="hover:text-vectura-accent transition-colors text-xs" type="button">
           [SETTINGS]
         </button>
@@ -71,9 +65,12 @@
 
     <main class="flex-1 flex overflow-hidden relative">
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
-        <div class="pane-header p-4 border-b border-vectura-border flex justify-between items-center">
+        <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
           <span class="pane-meta text-[10px] text-vectura-muted">V.5.1</span>
+          <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
+            ◀
+          </button>
         </div>
 
         <div class="pane-body flex-1 overflow-y-auto" id="left-panel-content">
@@ -162,6 +159,8 @@
         </div>
       </aside>
 
+      <div id="left-resizer" class="pane-resizer" aria-hidden="true"></div>
+
       <section class="flex-1 flex flex-col bg-[#121214] relative overflow-hidden">
         <div class="flex-1 relative cursor-crosshair" id="viewport-container">
           <canvas id="main-canvas" class="block absolute top-0 left-0 outline-none" role="img" aria-label="Vector preview"></canvas>
@@ -183,9 +182,14 @@
         </div>
       </section>
 
+      <div id="right-resizer" class="pane-resizer" aria-hidden="true"></div>
+
       <aside id="right-pane" class="pane pane-right bg-vectura-panel border-l border-vectura-border flex flex-col z-10 relative overflow-hidden">
-        <div class="pane-header p-4 border-b border-vectura-border flex justify-between items-center bg-vectura-panel z-20">
+        <div class="pane-header pane-header-right p-4 border-b border-vectura-border flex justify-between items-center bg-vectura-panel z-20">
           <span class="pane-title font-bold text-vectura-accent">LAYERS</span>
+          <button id="btn-pane-toggle-right" class="pane-toggle pane-toggle-right" type="button" aria-label="Toggle right pane">
+            ▶
+          </button>
           <button
             id="btn-add-layer"
             class="text-xs border border-vectura-border px-2 py-1 hover:bg-vectura-border text-vectura-accent transition-colors"
@@ -197,75 +201,6 @@
 
         <div class="pane-body flex-1 flex flex-col relative overflow-hidden">
           <div class="flex-1 overflow-y-auto p-4 relative" id="layer-list"></div>
-
-          <div id="settings-panel" class="absolute inset-0 bg-vectura-panel z-30 flex flex-col border-l border-vectura-border">
-            <div class="p-4 border-b border-vectura-border flex justify-between items-center bg-vectura-panel">
-              <span class="font-bold text-vectura-accent">SETTINGS</span>
-              <button id="btn-close-settings" class="text-vectura-muted hover:text-white" aria-label="Close settings" type="button">
-                ✕
-              </button>
-            </div>
-            <div class="flex-1 overflow-y-auto p-4">
-              <div class="control-group">
-                <label class="control-label">Machine Profile</label>
-                <select
-                  id="machine-profile"
-                  class="w-full bg-vectura-bg border border-vectura-border p-2 text-xs focus:outline-none focus:border-vectura-accent mb-2"
-                ></select>
-                <div class="flex gap-2">
-                  <div class="flex-1">
-                    <label class="control-label">Margin (mm)</label>
-                    <input
-                      type="number"
-                      id="set-margin"
-                      class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="control-group">
-                <label class="control-label">Plotter Physics</label>
-                <div class="grid grid-cols-2 gap-4">
-                  <div>
-                    <label class="text-[10px] text-vectura-muted">Draw Speed (mm/s)</label>
-                    <input
-                      type="number"
-                      id="set-speed-down"
-                      class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
-                    />
-                  </div>
-                  <div>
-                    <label class="text-[10px] text-vectura-muted">Travel Speed (mm/s)</label>
-                    <input
-                      type="number"
-                      id="set-speed-up"
-                      class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="control-group border-none">
-                <label class="control-label">Export &amp; Preview</label>
-                <div class="flex items-center justify-between mb-2">
-                  <label class="text-xs text-vectura-muted">Precision</label>
-                  <input
-                    type="number"
-                    id="set-precision"
-                    class="w-12 bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
-                  />
-                </div>
-                <div class="flex items-center justify-between">
-                  <label class="text-xs text-vectura-muted">Stroke (mm)</label>
-                  <input
-                    type="number"
-                    id="set-stroke"
-                    step="0.1"
-                    class="w-12 bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
 
           <div class="p-4 border-t border-vectura-border bg-vectura-bg z-20 relative">
             <div class="flex items-center justify-between mb-2">
@@ -287,6 +222,88 @@
           </div>
         </div>
       </aside>
+
+      <div id="settings-panel" class="settings-panel bg-vectura-panel border-l border-vectura-border">
+        <div class="p-4 border-b border-vectura-border flex justify-between items-center bg-vectura-panel">
+          <span class="font-bold text-vectura-accent">SETTINGS</span>
+          <button id="btn-close-settings" class="text-vectura-muted hover:text-white" aria-label="Close settings" type="button">
+            ✕
+          </button>
+        </div>
+        <div class="flex-1 overflow-y-auto p-4">
+          <div class="control-group">
+            <label class="control-label">Machine Profile</label>
+            <select
+              id="machine-profile"
+              class="w-full bg-vectura-bg border border-vectura-border p-2 text-xs focus:outline-none focus:border-vectura-accent mb-2"
+            ></select>
+            <div class="flex gap-2">
+              <div class="flex-1">
+                <label class="control-label">Margin (mm)</label>
+                <input
+                  type="number"
+                  id="set-margin"
+                  class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label">Plotter Physics</label>
+            <div class="grid grid-cols-2 gap-4">
+              <div>
+                <label class="text-[10px] text-vectura-muted">Draw Speed (mm/s)</label>
+                <input
+                  type="number"
+                  id="set-speed-down"
+                  class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
+                />
+              </div>
+              <div>
+                <label class="text-[10px] text-vectura-muted">Travel Speed (mm/s)</label>
+                <input
+                  type="number"
+                  id="set-speed-up"
+                  class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="control-group border-none">
+            <label class="control-label">Export &amp; Preview</label>
+            <div class="flex items-center justify-between mb-2">
+              <label class="text-xs text-vectura-muted">Precision</label>
+              <input
+                type="number"
+                id="set-precision"
+                class="w-12 bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
+              />
+            </div>
+            <div class="flex items-center justify-between">
+              <label class="text-xs text-vectura-muted">Stroke (mm)</label>
+              <input
+                type="number"
+                id="set-stroke"
+                step="0.1"
+                class="w-12 bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
+              />
+            </div>
+          </div>
+          <div class="control-group border-none">
+            <label class="control-label">History</label>
+            <div class="flex items-center justify-between">
+              <label class="text-xs text-vectura-muted">Undo Steps</label>
+              <input
+                type="number"
+                id="set-undo"
+                min="1"
+                max="200"
+                class="w-12 bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script src="./src/config/machines.js" defer></script>
