--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@
                   />
                 </div>
               </div>
+              <div class="mt-2">
+                <label class="text-[10px] text-vectura-muted">Rotation (deg)</label>
+                <input
+                  type="number"
+                  step="1"
+                  id="inp-rotation"
+                  class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
+                />
+              </div>
             </div>
 
             <div id="dynamic-controls"></div>
@@ -245,6 +254,55 @@
                   id="set-margin"
                   class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs focus:border-vectura-accent focus:outline-none"
                 />
+              </div>
+            </div>
+            <div class="mt-4">
+              <div class="flex items-center justify-between mb-2">
+                <label class="text-xs text-vectura-muted">Truncate</label>
+                <input type="checkbox" id="set-truncate" class="cursor-pointer" />
+              </div>
+              <div class="flex items-center justify-between mb-2">
+                <label class="text-xs text-vectura-muted">Outside Opacity</label>
+                <input
+                  type="number"
+                  id="set-outside-opacity"
+                  min="0"
+                  max="1"
+                  step="0.05"
+                  class="w-16 bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
+                />
+              </div>
+              <div class="flex items-center justify-between mb-2">
+                <label class="text-xs text-vectura-muted">Visible Line</label>
+                <input type="checkbox" id="set-margin-line" class="cursor-pointer" />
+              </div>
+              <div class="grid grid-cols-3 gap-2">
+                <div>
+                  <label class="text-[10px] text-vectura-muted">Line Weight</label>
+                  <input
+                    type="number"
+                    id="set-margin-line-weight"
+                    min="0.05"
+                    step="0.05"
+                    class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
+                  />
+                </div>
+                <div>
+                  <label class="text-[10px] text-vectura-muted">Line Color</label>
+                  <div class="relative w-full h-7 overflow-hidden rounded border border-vectura-border">
+                    <input type="color" id="set-margin-line-color" class="w-full h-full cursor-pointer" />
+                  </div>
+                </div>
+                <div>
+                  <label class="text-[10px] text-vectura-muted">Dotting</label>
+                  <input
+                    type="number"
+                    id="set-margin-line-dotting"
+                    min="0"
+                    step="0.5"
+                    class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
+                  />
+                </div>
               </div>
             </div>
           </div>
