--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.5.1</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.5.17</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -94,8 +94,8 @@
 
           <div class="p-4">
             <div class="control-group">
-              <label class="control-label">Transform &amp; Seed</label>
-              <div class="grid grid-cols-2 gap-2 mb-2">
+              <label class="control-label" id="transform-label">Transform &amp; Seed</label>
+              <div class="grid grid-cols-2 gap-2 mb-2" id="seed-controls">
                 <div>
                   <label class="text-[10px] text-vectura-muted">Seed</label>
                   <input
@@ -177,12 +177,24 @@
           <div id="notification-area" class="absolute top-4 right-4 flex flex-col gap-2 pointer-events-none z-50"></div>
         </div>
 
-        <div class="h-auto min-h-[60px] max-h-32 bg-vectura-panel border-t border-vectura-border p-4 z-20 flex flex-col overflow-y-auto">
-          <div class="flex justify-between items-start">
-            <span class="text-[10px] text-vectura-muted uppercase tracking-widest mb-1">Mathematical Model</span>
+        <div id="bottom-pane" class="bottom-pane bg-vectura-panel border-t border-vectura-border z-20 flex flex-col">
+          <div class="bottom-pane-header flex justify-between items-start p-4">
+            <span class="text-[10px] text-vectura-muted uppercase tracking-widest">Mathematical Model</span>
+            <button
+              id="btn-pane-toggle-bottom"
+              class="pane-toggle pane-toggle-bottom"
+              type="button"
+              aria-label="Toggle formula panel"
+            >
+              ▲
+            </button>
+          </div>
+          <div class="bottom-pane-body px-4 pb-2 flex-1 overflow-y-auto">
+            <p id="formula-display" class="text-xs text-vectura-text font-mono formula-text opacity-80 leading-relaxed">...</p>
+          </div>
+          <div class="bottom-pane-footer px-4 pb-4 flex justify-end">
             <span class="text-[10px] text-vectura-accent" id="formula-seed-display">Seed: ---</span>
           </div>
-          <p id="formula-display" class="text-xs text-vectura-text font-mono formula-text opacity-80 leading-relaxed">...</p>
         </div>
 
         <div class="absolute bottom-20 left-4 text-[10px] text-vectura-muted pointer-events-none">
@@ -210,6 +222,12 @@
 
         <div class="pane-body flex-1 flex flex-col relative overflow-hidden">
           <div class="flex-1 overflow-y-auto p-4 relative" id="layer-list"></div>
+          <div class="p-4 border-t border-vectura-border bg-vectura-panel">
+            <div class="flex items-center justify-between mb-2">
+              <span class="pane-title font-bold text-vectura-accent text-xs">PENS</span>
+            </div>
+            <div id="pen-list" class="pen-list"></div>
+          </div>
 
           <div class="p-4 border-t border-vectura-border bg-vectura-bg z-20 relative">
             <div class="flex items-center justify-between mb-2">
@@ -302,6 +320,16 @@
                     step="0.5"
                     class="w-full bg-vectura-bg border border-vectura-border p-1 text-xs text-right focus:border-vectura-accent focus:outline-none"
                   />
+                </div>
+              </div>
+              <div class="mt-4">
+                <div class="flex items-center justify-between mb-2">
+                  <label class="text-xs text-vectura-muted">Show Guides</label>
+                  <input type="checkbox" id="set-show-guides" class="cursor-pointer" />
+                </div>
+                <div class="flex items-center justify-between">
+                  <label class="text-xs text-vectura-muted">Snap Guides</label>
+                  <input type="checkbox" id="set-snap-guides" class="cursor-pointer" />
                 </div>
               </div>
             </div>
