--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.5.23</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.5.24</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -180,6 +180,8 @@
           <div id="notification-area" class="absolute top-4 right-4 flex flex-col gap-2 pointer-events-none z-50"></div>
         </div>
 
+        <div id="bottom-resizer" class="bottom-resizer" aria-hidden="true"></div>
+
         <div id="bottom-pane" class="bottom-pane bg-vectura-panel border-t border-vectura-border z-20 flex flex-col">
           <div class="bottom-pane-header flex justify-between items-start p-4">
             <span class="text-[10px] text-vectura-muted uppercase tracking-widest">Mathematical Model</span>
@@ -227,7 +229,21 @@
           <div class="flex-1 overflow-y-auto p-4 relative" id="layer-list"></div>
           <div class="p-4 border-t border-vectura-border bg-vectura-panel">
             <div class="flex items-center justify-between mb-2">
-              <span class="pane-title font-bold text-vectura-accent text-xs">PENS</span>
+              <div class="flex items-center gap-2">
+                <span class="pane-title font-bold text-vectura-accent text-xs">PENS</span>
+                <div class="palette-select relative">
+                  <button id="palette-toggle" class="palette-toggle" type="button" aria-label="Select palette">
+                    Blues-01
+                  </button>
+                  <div id="palette-menu" class="palette-menu hidden">
+                    <input id="palette-search" class="palette-search" type="text" placeholder="Search palettes..." />
+                    <div id="palette-options" class="palette-options"></div>
+                  </div>
+                </div>
+              </div>
+              <button id="btn-add-pen" class="text-[10px] border border-vectura-border px-2 py-1 hover:bg-vectura-border text-vectura-accent transition-colors" type="button">
+                + ADD
+              </button>
             </div>
             <div id="pen-list" class="pen-list"></div>
           </div>
@@ -409,6 +425,7 @@
 
     <script src="./src/config/machines.js" defer></script>
     <script src="./src/config/defaults.js" defer></script>
+    <script src="./src/config/palettes.js" defer></script>
     <script src="./src/config/descriptions.js" defer></script>
     <script src="./src/core/rng.js" defer></script>
     <script src="./src/core/noise.js" defer></script>
