--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.5.33</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.35</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -195,7 +195,7 @@
             </button>
           </div>
           <div class="bottom-pane-body px-4 pb-2 flex-1 overflow-y-auto">
-            <p id="formula-display" class="text-xs text-vectura-text font-mono formula-text opacity-80 leading-relaxed">...</p>
+            <div id="formula-display" class="text-xs text-vectura-text font-mono formula-text opacity-90 leading-relaxed">...</div>
           </div>
           <div class="bottom-pane-footer px-4 pb-4 flex justify-end">
             <span class="text-[10px] text-vectura-accent" id="formula-seed-display">Seed: ---</span>
