--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.42</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.44</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -509,9 +509,11 @@
     <script src="./src/config/machines.js" defer></script>
     <script src="./src/config/defaults.js" defer></script>
     <script src="./src/config/palettes.js" defer></script>
+    <script src="./src/config/presets.js" defer></script>
     <script src="./src/config/descriptions.js" defer></script>
     <script src="./src/core/rng.js" defer></script>
     <script src="./src/core/noise.js" defer></script>
+    <script src="./src/core/algorithms/petalis.js" defer></script>
     <script src="./src/core/algorithms/index.js" defer></script>
     <script src="./src/core/layer.js" defer></script>
     <script src="./src/core/engine.js" defer></script>
