--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.46</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.55</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -185,6 +185,83 @@
       <div id="left-resizer" class="pane-resizer" aria-hidden="true"></div>
 
       <section class="flex-1 flex flex-col bg-[#121214] relative overflow-hidden">
+        <div id="tool-bar" class="tool-bar" aria-label="Tools">
+          <button class="tool-btn" data-tool="select" type="button" aria-label="Selection Tool (V)" title="Selection (V)">
+            <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M4 2L14 12H9.5L12.5 21L9.5 22L6.5 13L3 16Z" fill="currentColor" />
+            </svg>
+          </button>
+          <button class="tool-btn" data-tool="direct" type="button" aria-label="Direct Selection Tool (A)" title="Direct Selection (A)">
+            <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M4 2L14 12H9.5L12.5 21L9.5 22L6.5 13L3 16Z" fill="none" stroke="currentColor" stroke-width="1.6" />
+              <rect x="15.5" y="3.5" width="4.5" height="4.5" rx="0.6" fill="currentColor" />
+            </svg>
+          </button>
+          <button class="tool-btn" data-tool="hand" type="button" aria-label="Hand Tool (Space)" title="Hand (Space)">
+            <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
+              <path
+                d="M7 12V6.5c0-.8.6-1.5 1.4-1.5.7 0 1.3.6 1.3 1.4V12m0-5.3V5c0-.8.6-1.4 1.4-1.4s1.4.6 1.4 1.4v6.9m0-5.1V5.3c0-.8.6-1.4 1.4-1.4s1.4.6 1.4 1.4V13m0-3.6V8.5c0-.8.6-1.4 1.4-1.4s1.4.6 1.4 1.4v6.8c0 2.5-1.6 4.7-4 5.5l-2.1.7c-2.5.9-5.3-.4-6.2-2.9L5 12.5"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1.4"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+          <button class="tool-btn" data-tool="pen" type="button" aria-label="Pen Tool (P)" title="Pen (P)">
+            <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M12 2L22 12L12 22L2 12Z" fill="none" stroke="currentColor" stroke-width="1.6" />
+              <circle cx="12" cy="12" r="2.3" fill="currentColor" />
+            </svg>
+          </button>
+          <div class="tool-divider"></div>
+          <div class="tool-group">
+            <button class="tool-btn" data-tool="scissor" type="button" aria-label="Scissor Tool (C)" title="Scissor (C)">
+              <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
+                <circle cx="6.5" cy="7.5" r="2.6" fill="none" stroke="currentColor" stroke-width="1.6" />
+                <circle cx="6.5" cy="16.5" r="2.6" fill="none" stroke="currentColor" stroke-width="1.6" />
+                <path d="M8.6 9.2L20 4.5M8.6 14.8L20 19.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" />
+                <path d="M11.5 12L15 10.5M11.5 12L15 13.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" />
+              </svg>
+            </button>
+            <div class="tool-submenu" aria-label="Scissor subtools">
+              <button class="tool-sub-btn" data-scissor="line" type="button" title="Scissor Line">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <line x1="4" y1="20" x2="20" y2="4" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                </svg>
+              </button>
+              <button class="tool-sub-btn" data-scissor="rect" type="button" title="Scissor Rectangle">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <rect x="4" y="6" width="16" height="12" rx="2" fill="none" stroke="currentColor" stroke-width="2" />
+                </svg>
+              </button>
+              <button class="tool-sub-btn" data-scissor="circle" type="button" title="Scissor Circle">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <circle cx="12" cy="12" r="7" fill="none" stroke="currentColor" stroke-width="2" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="tool-divider"></div>
+          <button
+            class="tool-btn tool-light hidden"
+            id="btn-light-source"
+            type="button"
+            aria-label="Set Light Source"
+            title="Set Light Source"
+          >
+            <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
+              <circle cx="12" cy="12" r="4.4" fill="currentColor" />
+              <path
+                d="M12 2V5M12 19V22M2 12H5M19 12H22M4.5 4.5L6.6 6.6M17.4 17.4L19.5 19.5M4.5 19.5L6.6 17.4M17.4 6.6L19.5 4.5"
+                stroke="currentColor"
+                stroke-width="1.6"
+                stroke-linecap="round"
+              />
+            </svg>
+          </button>
+        </div>
         <div class="flex-1 relative cursor-crosshair" id="viewport-container">
           <canvas id="main-canvas" class="block absolute top-0 left-0 outline-none" role="img" aria-label="Vector preview"></canvas>
           <div class="absolute inset-0 paper-texture opacity-30 pointer-events-none mix-blend-overlay"></div>
@@ -216,6 +293,7 @@
         <div id="canvas-help" class="canvas-help text-[10px] text-vectura-muted pointer-events-none">
           <p>PAN: Shift + Drag</p>
           <p>ZOOM: Mouse Wheel</p>
+          <p>TOOLS: V Select • A Direct • P Pen • C Scissor • Space Hand</p>
           <p>GROUP: Cmd/Ctrl + G</p>
           <p>EXPAND: Cmd/Ctrl + E</p>
           <p>?: Keyboard Shortcuts</p>
