--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.55</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.61</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -211,8 +211,18 @@
           </button>
           <button class="tool-btn" data-tool="pen" type="button" aria-label="Pen Tool (P)" title="Pen (P)">
             <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 2L22 12L12 22L2 12Z" fill="none" stroke="currentColor" stroke-width="1.6" />
-              <circle cx="12" cy="12" r="2.3" fill="currentColor" />
+              <path
+                d="M12 2.2L20.2 10.2L14.8 21.8H9.2L3.8 10.2Z"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1.6"
+                stroke-linejoin="round"
+              />
+              <circle cx="12" cy="11.6" r="1.7" fill="currentColor" />
+              <path d="M9.5 16.2L12 18.3L14.5 16.2" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" />
+              <line x1="5" y1="20.5" x2="19" y2="20.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" />
+              <circle cx="5" cy="20.5" r="1.3" fill="currentColor" />
+              <circle cx="19" cy="20.5" r="1.3" fill="currentColor" />
             </svg>
           </button>
           <div class="tool-divider"></div>
@@ -484,6 +494,10 @@
                 <div class="flex items-center justify-between">
                   <label class="text-xs text-vectura-muted">Snap Guides</label>
                   <input type="checkbox" id="set-snap-guides" class="cursor-pointer" />
+                </div>
+                <div class="flex items-center justify-between mt-2">
+                  <label class="text-xs text-vectura-muted">Grid Overlay (10mm)</label>
+                  <input type="checkbox" id="set-grid-overlay" class="cursor-pointer" />
                 </div>
               </div>
               <div class="mt-4">
